cabal-version: 3.4
name: cardano-api
version: 9.3.0.0
synopsis: The cardano API
description: The cardano API.
category:
  Cardano,
  API,

copyright: 2020-2024 Input Output Global Inc (IOG).
author: IOHK
maintainer: operations@iohk.io
license: Apache-2.0
license-files:
  LICENSE
  NOTICE

build-type: Simple
extra-doc-files:
  CHANGELOG.md
  README.md

common project-config
  default-language: Haskell2010
  default-extensions: OverloadedStrings
  build-depends: base >=4.14 && <4.21
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wno-unticked-promoted-constructors
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

  if impl(ghc < 9)
    ghc-options: -Wno-incomplete-patterns

common maybe-unix
  if !os(windows)
    build-depends: unix

common maybe-Win32
  if os(windows)
    build-depends: Win32

common text
  if impl(ghc == 8.10.7)&& os(osx)&& arch(aarch64)
    build-depends: text >=1.2.5.0
  else
    build-depends: text >=2.0

library internal
  import: project-config, maybe-unix, maybe-Win32, text
  visibility: public
  hs-source-dirs: internal
  -- Do not expose any additional modules. The correct way
  -- to expose new functionality is via Cardano.Api or
  -- Cardano.Api.Shelley
  exposed-modules:
    Cardano.Api.Address
    Cardano.Api.Anchor
    Cardano.Api.Block
    Cardano.Api.Certificate
    Cardano.Api.Convenience.Construction
    Cardano.Api.Convenience.Query
    Cardano.Api.DRepMetadata
    Cardano.Api.DeserialiseAnyOf
    Cardano.Api.Eon.AllegraEraOnwards
    Cardano.Api.Eon.AlonzoEraOnwards
    Cardano.Api.Eon.BabbageEraOnwards
    Cardano.Api.Eon.ByronToAlonzoEra
    Cardano.Api.Eon.ConwayEraOnwards
    Cardano.Api.Eon.MaryEraOnwards
    Cardano.Api.Eon.ShelleyBasedEra
    Cardano.Api.Eon.ShelleyEraOnly
    Cardano.Api.Eon.ShelleyToAllegraEra
    Cardano.Api.Eon.ShelleyToAlonzoEra
    Cardano.Api.Eon.ShelleyToBabbageEra
    Cardano.Api.Eon.ShelleyToMaryEra
    Cardano.Api.Eras
    Cardano.Api.Eras.Case
    Cardano.Api.Eras.Core
    Cardano.Api.Error
    Cardano.Api.Experimental.Eras
    Cardano.Api.Experimental.Tx
    Cardano.Api.Feature
    Cardano.Api.Fees
    Cardano.Api.Genesis
    Cardano.Api.GenesisParameters
    Cardano.Api.Governance.Actions.ProposalProcedure
    Cardano.Api.Governance.Actions.VotingProcedure
    Cardano.Api.Governance.Poll
    Cardano.Api.HasTypeProxy
    Cardano.Api.Hash
    Cardano.Api.IO
    Cardano.Api.IO.Base
    Cardano.Api.IO.Compat
    Cardano.Api.IO.Compat.Posix
    Cardano.Api.IO.Compat.Win32
    Cardano.Api.IPC
    Cardano.Api.IPC.Monad
    Cardano.Api.IPC.Version
    Cardano.Api.InMode
    Cardano.Api.Json
    Cardano.Api.Keys.Byron
    Cardano.Api.Keys.Class
    Cardano.Api.Keys.Praos
    Cardano.Api.Keys.Read
    Cardano.Api.Keys.Shelley
    Cardano.Api.Ledger.Lens
    Cardano.Api.LedgerEvents.ConvertLedgerEvent
    Cardano.Api.LedgerEvents.LedgerEvent
    Cardano.Api.LedgerEvents.Rule.BBODY.DELEGS
    Cardano.Api.LedgerEvents.Rule.BBODY.LEDGER
    Cardano.Api.LedgerEvents.Rule.BBODY.UTXOW
    Cardano.Api.LedgerEvents.Rule.TICK.NEWEPOCH
    Cardano.Api.LedgerEvents.Rule.TICK.RUPD
    Cardano.Api.LedgerState
    Cardano.Api.Modes
    Cardano.Api.Monad.Error
    Cardano.Api.NetworkId
    Cardano.Api.OperationalCertificate
    Cardano.Api.Orphans
    Cardano.Api.Pretty
    Cardano.Api.Protocol
    Cardano.Api.ProtocolParameters
    Cardano.Api.Query
    Cardano.Api.Query.Expr
    Cardano.Api.Query.Types
    Cardano.Api.ReexposeLedger
    Cardano.Api.ReexposeNetwork
    Cardano.Api.Rewards
    Cardano.Api.Script
    Cardano.Api.ScriptData
    Cardano.Api.SerialiseBech32
    Cardano.Api.SerialiseCBOR
    Cardano.Api.SerialiseJSON
    Cardano.Api.SerialiseLedgerCddl
    Cardano.Api.SerialiseRaw
    Cardano.Api.SerialiseTextEnvelope
    Cardano.Api.SerialiseUsing
    Cardano.Api.SpecialByron
    Cardano.Api.StakePoolMetadata
    Cardano.Api.Tx.Body
    Cardano.Api.Tx.Sign
    Cardano.Api.TxIn
    Cardano.Api.TxMetadata
    Cardano.Api.Utils
    Cardano.Api.Value
    Cardano.Api.ValueParser
    Cardano.Api.Via.ShowOf

  build-depends:
    FailT,
    aeson >=1.5.6.0,
    aeson-pretty >=0.8.5,
    attoparsec,
    base16-bytestring >=1.0,
    base58-bytestring,
    bech32 >=1.1.0,
    bytestring,
    cardano-binary,
    cardano-crypto,
    cardano-crypto-class ^>=2.1.2,
    cardano-crypto-wrapper ^>=1.5,
    cardano-data >=1.0,
    cardano-ledger-allegra >=1.6,
    cardano-ledger-alonzo >=1.10.2,
    cardano-ledger-api ^>=1.9.3,
    cardano-ledger-babbage >=1.9,
    cardano-ledger-binary ^>=1.3,
    cardano-ledger-byron >=1.0.1,
    cardano-ledger-conway >=1.16,
    cardano-ledger-core:{cardano-ledger-core, testlib} >=1.14,
    cardano-ledger-mary >=1.7,
    cardano-ledger-shelley >=1.13,
    cardano-protocol-tpraos >=1.2,
    cardano-slotting >=0.2.0.0,
    cardano-strict-containers >=0.1,
    cborg,
    containers,
    contra-tracer,
    data-default-class,
    deepseq,
    directory,
    dlist,
    either,
    errors,
    filepath,
    formatting,
    groups,
    iproute,
    memory,
    microlens,
    microlens-aeson,
    mtl,
    network,
    optparse-applicative-fork,
    ouroboros-consensus ^>=0.20,
    ouroboros-consensus-cardano ^>=0.19,
    ouroboros-consensus-diffusion ^>=0.17,
    ouroboros-consensus-protocol ^>=0.9.0.1,
    ouroboros-network,
    ouroboros-network-api ^>=0.9,
    ouroboros-network-framework,
    ouroboros-network-protocols,
    parsec,
    plutus-ledger-api:{plutus-ledger-api, plutus-ledger-api-testlib} ^>=1.32,
    prettyprinter,
    prettyprinter-ansi-terminal,
    prettyprinter-configurable ^>=1.32.1,
    random,
    safe-exceptions,
    scientific,
    serialise,
    small-steps ^>=1.1,
    sop-core,
    stm,
    strict-sop-core,
    time,
    transformers,
    transformers-except ^>=0.1.3,
    typed-protocols ^>=0.1.1,
    vector,
    yaml,

library
  import: project-config
  hs-source-dirs: src
  -- Do not expose any additional modules. The correct way
  -- to expose new functionality is via Cardano.Api or
  -- Cardano.Api.Shelley
  exposed-modules:
    Cardano.Api
    Cardano.Api.Byron
    Cardano.Api.ChainSync.Client
    Cardano.Api.ChainSync.ClientPipelined
    Cardano.Api.Crypto.Ed25519Bip32
    Cardano.Api.Experimental
    Cardano.Api.Ledger
    Cardano.Api.Network
    Cardano.Api.Shelley

  reexported-modules: Cardano.Api.Ledger.Lens
  build-depends:
    bytestring,
    cardano-api:internal,
    cardano-binary,
    cardano-crypto,
    cardano-crypto-class ^>=2.1.2,
    cryptonite,
    deepseq,
    memory,
    nothunks,
    ouroboros-network-protocols,
    typed-protocols ^>=0.1.1,

library gen
  import: project-config
  visibility: public
  hs-source-dirs: gen
  exposed-modules:
    Test.Gen.Cardano.Api
    Test.Gen.Cardano.Api.Byron
    Test.Gen.Cardano.Api.Era
    Test.Gen.Cardano.Api.Metadata
    Test.Gen.Cardano.Api.ProtocolParameters
    Test.Gen.Cardano.Api.Typed
    Test.Gen.Cardano.Crypto.Seed
    Test.Hedgehog.Golden.ErrorMessage
    Test.Hedgehog.Roundtrip.Bech32
    Test.Hedgehog.Roundtrip.CBOR

  build-depends:
    QuickCheck,
    aeson >=1.5.6.0,
    base16-bytestring,
    bytestring,
    cardano-api,
    cardano-api:internal,
    cardano-binary >=1.6 && <1.8,
    cardano-crypto-class ^>=2.1.2,
    cardano-crypto-test ^>=1.5,
    cardano-ledger-alonzo:{cardano-ledger-alonzo, testlib} >=1.8.1,
    cardano-ledger-byron-test >=1.5,
    cardano-ledger-conway:testlib,
    cardano-ledger-core:{cardano-ledger-core, testlib} >=1.14,
    cardano-ledger-shelley >=1.13,
    containers,
    filepath,
    hedgehog >=1.1,
    hedgehog-extras,
    hedgehog-quickcheck,
    tasty,
    tasty-hedgehog,
    text,

test-suite cardano-api-test
  import: project-config
  hs-source-dirs: test/cardano-api-test
  main-is: cardano-api-test.hs
  type: exitcode-stdio-1.0
  build-depends:
    QuickCheck,
    aeson >=1.5.6.0,
    bytestring,
    cardano-api,
    cardano-api:gen,
    cardano-api:internal,
    cardano-binary,
    cardano-crypto,
    cardano-crypto-class ^>=2.1.2,
    cardano-crypto-test ^>=1.5,
    cardano-crypto-tests ^>=2.1,
    cardano-ledger-alonzo,
    cardano-ledger-api ^>=1.9,
    cardano-ledger-binary,
    cardano-ledger-core:{cardano-ledger-core, testlib} >=1.14,
    cardano-ledger-mary,
    cardano-ledger-shelley,
    cardano-protocol-tpraos,
    cardano-slotting,
    cborg,
    containers,
    directory,
    hedgehog >=1.1,
    hedgehog-extras,
    hedgehog-quickcheck,
    interpolatedstring-perl6,
    mtl,
    ouroboros-consensus,
    ouroboros-consensus-cardano,
    ouroboros-consensus-protocol,
    ouroboros-network-api,
    plutus-ledger-api,
    tasty,
    tasty-hedgehog,
    tasty-quickcheck,
    time,

  other-modules:
    Test.Cardano.Api.Crypto
    Test.Cardano.Api.EpochLeadership
    Test.Cardano.Api.Eras
    Test.Cardano.Api.Genesis
    Test.Cardano.Api.IO
    Test.Cardano.Api.Json
    Test.Cardano.Api.KeysByron
    Test.Cardano.Api.Ledger
    Test.Cardano.Api.Metadata
    Test.Cardano.Api.ProtocolParameters
    Test.Cardano.Api.Typed.Address
    Test.Cardano.Api.Typed.Bech32
    Test.Cardano.Api.Typed.CBOR
    Test.Cardano.Api.Typed.Envelope
    Test.Cardano.Api.Typed.JSON
    Test.Cardano.Api.Typed.Ord
    Test.Cardano.Api.Typed.Orphans
    Test.Cardano.Api.Typed.RawBytes
    Test.Cardano.Api.Typed.TxBody
    Test.Cardano.Api.Typed.Value

  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N -T"

test-suite cardano-api-golden
  import: project-config
  hs-source-dirs: test/cardano-api-golden
  main-is: cardano-api-golden.hs
  type: exitcode-stdio-1.0
  build-depends:
    aeson,
    bech32 >=1.1.0,
    bytestring,
    cardano-api,
    cardano-api:gen,
    cardano-api:internal,
    cardano-binary,
    cardano-crypto-class ^>=2.1.2,
    cardano-data >=1.0,
    cardano-ledger-alonzo,
    cardano-ledger-api ^>=1.9,
    cardano-ledger-babbage >=1.9,
    cardano-ledger-core:{cardano-ledger-core, testlib} >=1.14,
    cardano-ledger-shelley,
    cardano-ledger-shelley-test >=1.2.0.1,
    cardano-slotting ^>=0.2.0.0,
    containers,
    errors,
    filepath,
    hedgehog >=1.1,
    hedgehog-extras ^>=0.6.1.0,
    microlens,
    parsec,
    plutus-core ^>=1.32,
    plutus-ledger-api ^>=1.32,
    tasty,
    tasty-hedgehog,
    text,
    time,

  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N -T"

  build-tool-depends: tasty-discover:tasty-discover
  other-modules:
    Test.Golden.Cardano.Api.Genesis
    Test.Golden.Cardano.Api.Ledger
    Test.Golden.Cardano.Api.ProtocolParameters
    Test.Golden.Cardano.Api.Typed.Script
    Test.Golden.Cardano.Api.Value
    Test.Golden.ErrorsSpec
